# dumbass-questions-bot

./: Cargo.toml
migrations/: 20250308145601_init.sql
src/: main.rs
src/commands/: commands.txt  conf.rs  mod.rs  modonly.rs  qotd.rs  utils.rs
src/data/: config.rs  database.rs  mod.rs  question.rs
