[package]
name = "dumbass-questions-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE.txt"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
