[package]
name = "dumbass-questions-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
poise = "0.6.1"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
chrono = "0.4.40"
chrono-tz = "0.10.1"
eyre = "0.6.12"
derivative = "2.2.0"
